--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,3 +1,13 @@
-<p>
-  movies works!
-</p>
+<h1>Movies</h1>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Director</th>
+      <th>Image</th>
+      <th>Duration</th>
+      <th>Release Date</th>
+      <th>Genres</th>
+    </tr>
+  </thead>
