--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -12,13 +12,9 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let movie of movies">  
-          <td>{{ movie.Name }}</td>
-          <td>{{ movie.Director }}</td>
-          <td>{{ movie.ImageUrl }}</td>
-          <td>{{ movie.Duration }}</td>
-          <td>{{ movie.ReleaseDate }}</td>
-          <td>{{ movie.Genres }}</td>      
+    <tr *ngFor="let movie of movies"
+    [movieRow]="movie">  
+               
     </tr>
   </tbody>
 </table>
