--- a/src/app/components/movies/movie-row/movie-row.component.html
+++ b/src/app/components/movies/movie-row/movie-row.component.html
@@ -1,7 +1,7 @@
 <td class="align-middle">{{ movieRow.Name }}</td>
 <td class="align-middle">{{ movieRow.Director }}</td>
 <td class="align-middle">
-    <img src="{{ movieRow.ImageUrl }}" width="50" height="100"/>
+    <img src="{{ movieRow.ImageUrl }}" alt="{{ movieRow.Name }}" width="50" height="100"/>
 </td>
 <td class="align-middle"> {{ movieRow.Duration }} </td>
 <td class="align-middle"> {{ movieRow.ReleaseDate }} </td>
