--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -3,9 +3,10 @@
     <li class="nav-item">
       <a class="navbar-brand" routerLink="/" routerLinkActive="active">Movies</a>
     </li>    
-  </ul>
+  </ul>  
 </nav>
 
 <div class="container">
-  <router-outlet></router-outlet>
+    <app-search></app-search>
+    <router-outlet></router-outlet>
 </div>
